# kodimote

./: .gitignore  .qmake.cache.in  CMakeLists.txt  aboutdialog.cpp  albumitem.cpp  albumitem.h  artistitem.cpp  audioplayer.h  config.pri  gesturehelper.cpp  gesturehelper.h  kodimote.pro  libraryitem.cpp  libraryitem.h  main.cpp  mainwindow.cpp  mainwindow.h  meegohelper.cpp  meegohelper.h  messages.sh  networkaccessmanagerfactory.cpp  networkaccessmanagerfactory.h  networkauthhandler.cpp  nfchandler.cpp  nfchandler.h  playlist.cpp  rumbleeffect.cpp  rumbleeffect.h  run_on_ubuntu_touch.sh  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  songitem.cpp  symbianhelper.cpp  symbianhelper.h  updateapi.py  videoplayer.cpp  xbmcconnection.h  xbmcremote.desktop  (+3 more)
.tx/: config
JsonQt/: jsonqt.pro
apps/: CMakeLists.txt  apps.pro
apps/generic/: generic.pro  kodimote.desktop  main.cpp  networkaccessmanagerfactory.cpp  networkaccessmanagerfactory.h  networkauthhandler.cpp  networkauthhandler.h  settings.h  xbmcremote.qrc
apps/harmattan/: gesturehelper.cpp  gesturehelper.h  harmattan.pro  main.cpp  meegohelper.cpp  meegohelper.h  nfchandler.cpp  nfchandler.h  rumbleeffect.cpp  rumbleeffect.h  xbmcremote.desktop
apps/plasmoid/: CMakeLists.txt  declarativepopup.cpp  declarativepopup.h  plasma-applet-xbmcremote.desktop  xbmcremote.cpp  xbmcremote.h  xbmcremote.svgz
apps/plasmoid/dataengine/: .hostcontainer.cpp.kate-swp  CMakeLists.txt  dataengine.kdev4  hostcontainer.cpp  hostcontainer.h  hostselector.cpp  hostselector.h  hostsjob.cpp  hostsjob.h  org.kde.xbmcremote.Hosts.operations  org.kde.xbmcremote.Player.operations  org.kde.xbmcremote.Xbmc.operations  plasma-engine-xbmcremote.desktop  playercontainer.cpp  playercontainer.h  playerjob.cpp  playerjob.h  playerservice.cpp  playerservice.h  xbmccontainer.cpp  xbmccontainer.h  xbmcjob.cpp  xbmcjob.h  xbmcremoteengine.cpp  xbmcremoteengine.h  xbmcservice.cpp  xbmcservice.h
apps/plasmoid/qml/: .PopupDialog.qml.kate-swp  Browser.qml  BrowserPage.qml  ButtonShadow.qml  HostList.qml  MediaControlButton.qml  NowPlaying.qml  PlayerControls.qml  PopupDialog.qml  TabView.qml
apps/plasmoid/xbmcremote/: .metadata.desktop.kate-swp  metadata.desktop  plasma-applet-xbmcremote.desktop
apps/plasmoid/xbmcremote/contents/ui/: Dummy.qml  HorizontalDock.qml  NoConnection.qml  NowPlaying.qml  NowPlayingSmall.qml  PlayerControls.qml  PopupDialog.qml  main.qml
apps/plasmoid/xbmcremote/contents/ui/icons/: xbmcremote.svgz
apps/sailfish/: harbour-xbmcremote.desktop  sailfish.pro  xbmcremote.desktop
apps/ubuntu/: images.qrc  kodimote-contenthub.json  kodimote.apparmor  kodimote.desktop  main.cpp  manifest.json  manifest.json.in  resources.qrc  ubuntu.pro  ubuntuhelper.cpp  ubuntuhelper.h  xbmcremote.desktop  xbmcremote.json
debian/: changelog  control  plasma-widget-xbmcremote.install  rules  xbmcremote.install
doc/: xbmcapi.json
i18n/: i18n.pri  kodimote.ts  kodimote_ar.qm  kodimote_de.qm  kodimote_de.ts  kodimote_el.ts  kodimote_es.qm  kodimote_es.ts  kodimote_fi.qm  kodimote_fr.ts  kodimote_nl.qm  kodimote_nl.ts  kodimote_pl.ts  kodimote_pt_BR.qm  kodimote_ro.ts  kodimote_ru.ts  kodimote_sv.ts  kodimote_tr.ts  kodimote_tr_TR.ts  kodimote_vi.qm  kodimote_zh.ts  translations.qrc  xbmcremote.ts  xbmcremote_ar.qm  xbmcremote_ar.ts  xbmcremote_cs_CZ.qm  xbmcremote_cs_CZ.ts  xbmcremote_de.qm  xbmcremote_de.ts  xbmcremote_de_AT.qm  xbmcremote_de_AT.ts  xbmcremote_el.qm  xbmcremote_el.ts  xbmcremote_en.ts  xbmcremote_es.ts  xbmcremote_es_AR.qm  xbmcremote_es_AR.ts  xbmcremote_fi.qm  xbmcremote_fi.ts  xbmcremote_fr.qm  (+24 more)
libkodimote/: CMakeLists.txt  addonsource.cpp  addonsource.h  albums.cpp  albums.h  artists.cpp  artists.h  audiolibrary.cpp  audiolibrary.h  audioplayer.cpp  audioplayer.h  audioplaylist.cpp  audioplaylist.h  audioplaylistitem.cpp  audioplaylistitem.h  channelbroadcasts.cpp  channelbroadcasts.h  channelgroups.cpp  channelgroups.h  channelitem.h  channels.cpp  channels.h  episodeitem.cpp  episodeitem.h  episodes.cpp  episodes.h  eventclient.cpp  eventclient.h  files.cpp  files.h  genres.cpp  genres.h  imagecache.cpp  imagecache.h  keys.cpp  keys.h  kodebug.cpp  kodebug.h  kodi.cpp  kodi.h  (+77 more)
libkodimote/mpris2/: mprisapplication.cpp  mprisapplication.h  mpriscontroller.cpp  mpriscontroller.h  mprisplayer.cpp  mprisplayer.h
libkodimote/protocolhandlers/: nativeprotocolhandler.cpp  nativeprotocolhandler.h  (+6 more)
libxbmcremote/: CMakeLists.txt  albums.cpp  albums.h  artists.cpp  artists.h  audiolibrary.cpp  audiolibrary.h  audioplayer.cpp  audioplayer.h  audioplaylist.cpp  audioplaylist.h  audioplaylistitem.cpp  audioplaylistitem.h  channelbroadcasts.cpp  channelgroups.cpp  channelgroups.h  channelitem.cpp  channelitem.h  channels.cpp  channels.h  episodeitem.cpp  episodeitem.h  episodes.cpp  episodes.h  eventclient.cpp  eventclient.h  files.cpp  files.h  genres.cpp  genres.h  imagecache.cpp  imagecache.h  keys.cpp  keys.h  libraryitem.cpp  libraryitem.h  libxbmcremote.pro  libxbmcremote_global.h  movies.cpp  movies.h  (+67 more)
qmlapplicationviewer/: qmlapplicationviewer.pri
qtc_packaging/: meego.spec
rpm/: harbour-kodimote.changes  harbour-kodimote.spec  harbour-kodimote.yaml  harbour-xbmcremote.changes  harbour-xbmcremote.spec  harbour-xbmcremote.yaml  xbmcremote.spec  xbmcremote.yaml
ui/: aboutdialog.cpp  aboutdialog.h  authenticationdialog.cpp  connectdialog.cpp  connectdialog.h  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h
xbmc/: albumitem.cpp  albumitem.h  albums.cpp  albums.h  artistitem.cpp  artistitem.h  artists.cpp  artists.h  audiolibrary.cpp  audiolibrary.h  audioplayer.cpp  audioplayer.h  audioplaylist.cpp  audioplaylist.h  audioplaylistitem.cpp  audioplaylistitem.h  episodeitem.h  episodes.cpp  episodes.h  files.cpp  files.h  imagecache.cpp  imagecache.h  keys.cpp  keys.h  libraryitem.cpp  libraryitem.h  movieitem.cpp  movieitem.h  movies.cpp  movies.h  musicvideos.cpp  musicvideos.h  pictureplayer.cpp  pictureplayer.h  pictureplaylist.cpp  pictureplaylist.h  player.cpp  player.h  playlist.cpp  (+41 more)
(+230 files in other folders)
